assets/app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-node
  namespace: default
spec:
  gateways:
  - istio-system/gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: hello-node.default.svc.cluster.local
        port:
          number: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-node
  name: hello-node
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello-node
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-node
  name: hello-node
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
      - name: echoserver
        image: k8s.gcr.io/echoserver:1.4
