assets/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test
  namespace: default
spec:
  gateways:
  - istio-system/gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: hello-node.default.svc.cluster.local
        port:
          number: 8080
